--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -1,10 +1,16 @@
-<h1 class="page-header">Administradores</h1>
+<h1 class="page-header"><%= @admins.model_name.human(count: 2) %></h1>
 <div class="panel panel-default">
     <div class="panel-heading">
-        Listando Administradores
+        <%= t('messages.listing', model: @admins.model_name.human(count: 2)) %>
         <div class="pull-right" style="margin-top:-5px">
-            <%= link_to new_backoffice_admin_path, class:'btn btn-success btn-circle' do %>
-                <i class="fa fa-plus"></i>
+            <% if policy(@admins).new? %>
+                <%= link_to new_backoffice_admin_path, class:'btn btn-success btn-circle' do %>
+                    <i class="fa fa-plus"></i>
+                <% end %>
+            <% else %>
+                <%= link_to new_backoffice_admin_path, class:'btn btn-success btn-circle', disabled:true do %>
+                    <i class="fa fa-plus"></i>
+                <% end %>
             <% end %>
         </div>
     </div>
@@ -27,13 +33,13 @@
                         <td><%= admin.id %></td>
                         <td><%= admin.email %></td>
                         <td><%= admin.name %></td>
-                        <td><%= admin.role_br %></td>
+                        <td><%= admin.role_i18n %></td>
                         <td style="width: 100px">
                             <%= link_to edit_backoffice_admin_path(admin), class:'btn btn-primary btn-circle' do %>
                                 <i class="fa fa-edit"></i>
                             <% end %>
-                            <% unless current_admin == admin %>
-                                <%= link_to backoffice_admin_path(admin), method: :delete, class:"btn btn-danger btn-circle", data: {confirm: "Você deseja realmente excluir #{admin.email}?"} do %>
+                            <% if current_admin != admin && policy(@admins).destroy? %>
+                                <%= link_to backoffice_admin_path(admin), method: :delete, class:"btn btn-danger btn-circle", data: {confirm: t('messages.confirm_with', item: admin.name)} do %>
                                     <i class="fa fa-times"></i>
                                 <% end %>
                             <% else %>
