--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -50,6 +50,12 @@
       $.notify("<%= notice %>","success")
     </script>
   <% end %>
+
+  <% if alert %>
+    <script>
+      $.notify("<%= alert %>","error")
+    </script>
+  <% end %>
 </body>
 
 </html>
