--- a/app/views/backoffice/admins/index.html.erb
+++ b/app/views/backoffice/admins/index.html.erb
@@ -34,7 +34,10 @@
                         <td><%= admin.email %></td>
                         <td><%= admin.name %></td>
                         <td><%= admin.role_i18n %></td>
-                        <td style="width: 100px">
+                        <td style="width: 120px">
+                            <%= link_to edit_backoffice_send_mail_path(admin), class:'btn btn-info btn-circle', remote: true do %>
+                                <i class="fa fa-envelope"></i>
+                            <% end %>
                             <%= link_to edit_backoffice_admin_path(admin), class:'btn btn-primary btn-circle' do %>
                                 <i class="fa fa-edit"></i>
                             <% end %>
@@ -57,3 +60,4 @@
     </div>
 <!-- /.panel-body -->
 </div>
+<%= render partial: 'send_mail' %>
