--- a/app/views/backoffice/send_mail/edit.js.erb
+++ b/app/views/backoffice/send_mail/edit.js.erb
@@ -2,4 +2,8 @@ $(function(){
 	$('#recipient-name').val('<%= @admin.email %>');
 	$('h4.modal-title').text('Enviar mensagem para <%= @admin.name %>');
 	$('#sendMailModal').modal();
+	$('#sendMailModal').on('shown.bs.modal', function() {
+		$('#message-text').focus();
+		/* Act on the event */
+	});
 });
