Send message with modal

--- a/app/views/backoffice/send_mail/edit.js.erb
+++ b/app/views/backoffice/send_mail/edit.js.erb
@@ -6,7 +6,7 @@ $(function(){
 
 	$sendMailModal.modal();
 	$sendMailModal.on('shown.bs.modal', function() {
-		$('#message-text').focus();
+		$('#subject-text').focus();
 		/* Act on the event */
 	});
 });
