--- a/app/views/layouts/site_shared/_navigation.html.erb
+++ b/app/views/layouts/site_shared/_navigation.html.erb
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><%= t('app.name') %></a>
+            <%= link_to t('app.name'), root_path, class:"navbar-brand" %>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -23,7 +23,7 @@
                     </li>
                 <% else %>
                     <li>
-                        <%= link_to current_member.email, "#" %>
+                        <%= link_to current_member.email, site_profile_dashboard_index_path %>
                     </li>
                     <li>
                         <%= link_to "Sair", destroy_member_session_path, method: :delete %>
