--- a/app/views/site/profile/ads/edit.html.erb
+++ b/app/views/site/profile/ads/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editando Anúncios</h1>
 
-<%= form_for([:site, :profile, @ad]) do |f| %>
+<%= form_for([:site, :profile, @ad], html: {multipart: true }) do |f| %>
 	<div class="row">
 		<div class="col-md-6">
 			<div class="form-group">
