--- a/app/views/site/profile/ads/shared/_form.html.erb
+++ b/app/views/site/profile/ads/shared/_form.html.erb
@@ -37,6 +37,14 @@
 		</div>
 	</div>
 	<div class="row">
+		<div class="col-md-3">
+			<div class="form-group">
+		    <%= f.label :finish_date %>
+		    <%= f.date_field :finish_date, class:'form-control' %>
+		  </div>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-md-6">
 			<div class="form-group">
 		    <%= f.label :picture %> <br>
