Ads, notices, routes

--- a/app/views/layouts/profile.html.erb
+++ b/app/views/layouts/profile.html.erb
@@ -14,9 +14,6 @@
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= stylesheet_link_tag    'site', media: 'all'%>
   <%= stylesheet_link_tag    'site/profile', media: 'all'%>
-  <%= javascript_include_tag 'application'%>
-  <%= javascript_include_tag 'site'%>
-  <%= javascript_include_tag 'site/profile'%>
   <%= csrf_meta_tags %>
 </head>
 
@@ -55,16 +52,12 @@
             </div>
         </div>
     </div>
-  <% if notice %>
-    <script>
-      $.notify("<%= notice %>","success")
-    </script>
-  <% end %>
-  <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-  </script>
+  <%= javascript_include_tag 'application'%>
+  <%= javascript_include_tag 'site'%>
+  <%= javascript_include_tag 'site/profile'%>
+
+  <%= yield :javascripts %>
+
+  <%= render 'layouts/shared/notifications' %>
 </body>
 </html>
