--- a/app/assets/stylesheets/site/profile.scss
+++ b/app/assets/stylesheets/site/profile.scss
@@ -1,3 +1,6 @@
+/*
+ *= require jquery-ui/datepicker
+ */
 /*!
  * Start Bootstrap - Simple Sidebar (http://startbootstrap.com/)
  * Copyright 2013-2016 Start Bootstrap
