--- a/app/views/layouts/backoffice_devise.html.erb
+++ b/app/views/layouts/backoffice_devise.html.erb
@@ -10,10 +10,10 @@
   <meta name="author" content="">
 
   <title>Barterapp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag    'backoffice', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'backoffice', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= stylesheet_link_tag    'backoffice', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'backoffice' %>
   <%= csrf_meta_tags %>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -32,11 +32,8 @@
   </div>
     <!-- /#wrapper -->
 
-  <% flash.each do |key, value| %>
-    <script>
-      $.notify("<%= value %>","error")
-    </script>
-  <% end %>
+
+  <%= render 'layouts/shared/notifications' %>
 </body>
 
 </html>
