--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -11,18 +11,19 @@
 
     <title>BatterApp</title>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag    'site', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'site', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= stylesheet_link_tag    'site', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
 
 <body>
+  <div id="global-spin" class="loading" style="display: none;">Loading&#8230;</div>
   <%= render partial: 'layouts/site_shared/navigation' %>
   <%= yield %>
   <%= render partial: 'layouts/site_shared/footer' %>
 
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'site' %>
 </body>
 
 </html>
