--- a/app/views/layouts/site_devise.html.erb
+++ b/app/views/layouts/site_devise.html.erb
@@ -11,7 +11,9 @@
 
   <title>Barterapp</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= stylesheet_link_tag    'backoffice', media: 'all' %>
+  <%= stylesheet_link_tag    'site', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'site' %>
   <%= csrf_meta_tags %>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -24,29 +26,12 @@
 </head>
 
 <body>
-
   <div id="wrapper">
-    <%= render partial: 'layouts/backoffice_shared/navigation' %>
-    <!-- Page Content -->
-    <div id="page-wrapper">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                  <%= yield %>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container-fluid -->
-    </div>
-    <!-- /#page-wrapper -->
+		<%= yield %>
   </div>
     <!-- /#wrapper -->
-  <%= javascript_include_tag 'application' %>
-  <%= javascript_include_tag 'backoffice' %>
-
   <%= render 'layouts/shared/notifications' %>
+
 </body>
 
 </html>
