--- a/app/views/site/home/_ads.html.erb
+++ b/app/views/site/home/_ads.html.erb
@@ -4,7 +4,8 @@
             <%= image_tag ad.picture.url(:medium) %>
             <div class="caption">
                 <h4 class="pull-right"><%= humanized_money_with_symbol ad.price %></h4>
-                <h4><a href="#"><%= ad.title.truncate(20) %></a>
+                <h4>
+                <%= link_to ad.title.truncate(20), site_ad_detail_path(ad), remote: true %>
                 </h4>
                 <p><%= ad.description.truncate(100) %></p>
             </div>
