--- a/app/views/site/profile/ads/shared/_form.html.erb
+++ b/app/views/site/profile/ads/shared/_form.html.erb
@@ -62,8 +62,33 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="form-group">
-		    <%= f.label :description %>
-		    <%= f.text_area :description, class:'form-control', rows: 10 %>
+		    <%= f.label :description_short %>
+		    <%= f.text_area :description_short, class:'form-control', rows: 5 %>
+		  </div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="form-group">
+		    <%= f.label :description_md %>
+		    <%= f.text_area :description_md, class:'form-control', rows: 10 %>
+		  </div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="form-group">
+		    <div class="panel panel-primary">
+	          <div class="panel-heading">
+	              Pré-Visualização
+	          </div>
+	          <div class="panel-body">
+	              <%= @ad.description.html_safe if @ad.description.present? %>
+	          </div>
+	          <div class="panel-footer">
+	              Panel Footer
+	          </div>
+	      </div>
 		  </div>
 		</div>
 	</div>
