--- a/app/views/site/shared/_ads.html.erb
+++ b/app/views/site/shared/_ads.html.erb
@@ -5,7 +5,7 @@
             <div class="caption">
                 <h4 class="pull-right"><%= humanized_money_with_symbol ad.price %></h4>
                 <h4>
-                <%= link_to ad.title.truncate(20), site_ad_detail_path(ad), remote: true %>
+                <%= link_to ad.title.truncate(20), site_ad_detail_path(ad), remote: true, data: { push: :partial } %>
                 </h4>
                 <p><%= ad.description_short.truncate(100) if ad.description_short.present? %></p>
             </div>
