--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -21,6 +21,22 @@
   <%= render partial: 'layouts/site_shared/navigation' %>
 
   <div class="container">
+
+      <div class="row">
+          <div class="panel panel-default">
+              <div class="panel-body">
+                  <div class="col-lg-6 col-lg-offset-3">
+                    <div class="input-group">
+                      <input type="text" class="form-control" placeholder="Pesquisar por...">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Pesquisar!</button>
+                      </span>
+                  </div><!-- /input-group -->
+                  </div>
+              </div>
+          </div>
+      </div>
+
       <div class="row">
           <%= render 'layouts/site_shared/sidebar' %>
           <div id="home-detail" class="col-md-9">
