--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -22,30 +22,32 @@
 
   <div class="container">
 
+    <%= form_tag site_search_path, method: :get do %>
       <div class="row">
-          <div class="panel panel-default">
-              <div class="panel-body">
-                  <div class="col-lg-6 col-lg-offset-3">
-                    <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Pesquisar por...">
-                      <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">Pesquisar!</button>
-                      </span>
-                  </div><!-- /input-group -->
-                  </div>
-              </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="col-lg-6 col-lg-offset-3">
+              <div class="input-group">
+                <%= text_field_tag :q, params[:q], class: 'form-control', placeholder: 'Pesquisar por...' %>
+                <span class="input-group-btn">
+                <%= submit_tag t('buttons.search'), class: 'btn btn-default' %>
+                </span>
+              </div><!-- /input-group -->
+            </div>
           </div>
+        </div>
       </div>
+    <% end %>
 
-      <div class="row">
-          <%= render 'layouts/site_shared/sidebar' %>
-          <div id="home-detail" class="col-md-9">
-              <%= render 'layouts/site_shared/carousel' if controller_path == 'site/home' %>
-              <div class="row">
-                  <%= yield %>
-              </div>
-          </div>
+    <div class="row">
+      <%= render 'layouts/site_shared/sidebar' %>
+      <div id="home-detail" class="col-md-9">
+        <%= render 'layouts/site_shared/carousel' if controller_path == 'site/home' %>
+        <div class="row">
+          <%= yield %>
+        </div>
       </div>
+    </div>
   </div>
 
   <%= render partial: 'layouts/site_shared/footer' %>
