--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -54,6 +54,8 @@
 
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'site' %>
+
+  <%= render 'layouts/shared/notifications' %>
 </body>
 
 </html>
