--- a/app/views/site/ad_detail/_show.html.erb
+++ b/app/views/site/ad_detail/_show.html.erb
@@ -20,54 +20,23 @@
 </div>
 
 <div class="well">
-
-    <div class="text-right">
-        <a class="btn btn-success">Leave a Review</a>
-    </div>
-
-    <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">10 days ago</span>
-            <p>This product was great in terms of quality. I would definitely buy another!</p>
+    <% if member_signed_in? %>
+        <div class="text-right">
+            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#commentModal">
+              Deixe um comentário
+            </button>
         </div>
-    </div>
-
-    <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">12 days ago</span>
-            <p>I've alredy ordered another one!</p>
+    <% else %>
+        <div class="text-right">
+            <button type="button" class="btn btn-success" disabled="disabled" data-toggle="modal" data-target="#commentModal">
+              Efetue login para comentar
+            </button>
         </div>
-    </div>
-
+    <% end %>
     <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">15 days ago</span>
-            <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
-        </div>
-    </div>
+    <%= render 'comments' %>
 
 </div>
+
+<%= render 'modal' %>
+
