--- a/app/views/site/search/ads.html.erb
+++ b/app/views/site/search/ads.html.erb
@@ -1,5 +1,5 @@
 <%= render 'site/shared/ads' %>
-<div class="col-md-12">
+<div class="col-md-12ffice">
 	<div class="text-center">
 		<%= paginate @ads %>
 	</div>
