--- a/app/views/site/ad_detail/_comments.html.erb
+++ b/app/views/site/ad_detail/_comments.html.erb
@@ -9,6 +9,7 @@
         <%= comment.member.email %>
         <span class="pull-right"><%= l comment.created_at, format: :short %></span>
         <p><%= comment.body %></p>
+        <%= rating_for_user @ad, current_member, 'quality' if current_member.id == comment.member.id %>
     </div>
 </div>
 <hr>
