--- a/app/views/site/ad_detail/_show.html.erb
+++ b/app/views/site/ad_detail/_show.html.erb
@@ -6,11 +6,15 @@
         </h4>
         <p><%= @ad.description.html_safe %></p>
     </div>
-    <div class="ratings">
-        <p class="pull-right">3 reviews</p>
-        <p>
-            <%= rating_for @ad, 'quality' %>
-        </p>
+</div>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="ratings">
+            <p class="pull-right"><%= @ad.comments.count %> comentários</p>
+            <p>
+                <%= rating_for @ad, 'quality' %>
+            </p>
+        </div>
     </div>
 </div>
 
@@ -23,8 +27,7 @@
         </div>
     <% else %>
         <div class="text-right">
-            <button type="button" class="btn btn-success" disabled="disabled" data-toggle="modal" data-target="#commentModal">
-              Efetue login para comentar
+        <%= link_to "Efetue login para comentar", new_member_session_path, class: 'btn btn-success' %>
             </button>
         </div>
     <% end %>
