--- a/app/views/site/shared/_ads.html.erb
+++ b/app/views/site/shared/_ads.html.erb
@@ -2,7 +2,7 @@
     <div class="col-sm-4 col-lg-4 col-md-4">
         <div class="thumbnail">
             <%= image_tag ad.picture.url(:medium) %>
-            <div class="caption">
+            <div class="caption" style="height: 100px;">
                 <h4 class="pull-right"><%= humanized_money_with_symbol ad.price %></h4>
                 <h4>
                 <%= link_to ad.title.truncate(20), site_ad_detail_path(ad), remote: true, data: { push: :partial } %>
